--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,39 +47,13 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="monospace"
                 android:text="@string/app_title"
+                android:textAlignment="center"
                 android:textAppearance="@android:style/TextAppearance.Material.Headline"
                 android:textSize="@dimen/header_size"
-                android:typeface="monospace"
-                android:textAlignment="center"/>
+                android:typeface="monospace" />
 
 
-            <EditText
-                android:id="@+id/plainText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_margin"
-                android:ems="10"
-                android:inputType="text"
-                android:hint="@string/app_input_plaintext"
-                android:autofillHints="emailAddress, url" />
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_margin"
-                android:ems="10"
-                android:inputType="textVisiblePassword"
-                android:hint="@string/app_input_secret"
-                android:importantForAutofill="no" />
-            <EditText
-                android:id="@+id/cipher"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_margin"
-                android:ems="10"
-                android:inputType="text"
-                android:hint="@string/app_input_cipher"
-                android:importantForAutofill="no" />
+            <include layout="@layout/inputs_layout" />
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
