--- a/app/src/main/res/layout/inputs_layout.xml
+++ b/app/src/main/res/layout/inputs_layout.xml
@@ -11,9 +11,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin"
-            android:autofillHints="emailAddress, url"
-            android:ems="10"
+            android:ems="@integer/default_input_wide"
             android:hint="@string/app_input_plaintext"
+            android:autofillHints="emailAddress, url"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -27,10 +27,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin"
-            android:ems="10"
+            android:ems="@integer/default_input_wide"
             android:hint="@string/app_input_secret"
-            android:importantForAutofill="no"
-            android:inputType="textVisiblePassword" />
+            android:autofillHints="password"
+            android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -44,7 +44,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin"
-            android:ems="10"
+            android:ems="@integer/default_input_wide"
+            android:enabled="false"
             android:hint="@string/app_input_cipher"
             android:importantForAutofill="no"
             android:inputType="text" />
