--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen android:layout_width="match_parent"
+<PreferenceScreen
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <CheckBoxPreference
-        app:title="Enable message notifications"/>
+        android:key="@string/preference_is_hashed"
+        android:title="Hash input value"/>
 
-    <Preference
-        app:title="Send feedback"/>
+    <EditTextPreference
+        android:key="@string/preference_token"
+        android:title="Default token"
+        android:summary="User provided token"/>
 
 </PreferenceScreen>
