--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,37 +25,44 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="@dimen/default_margin_small"
-            android:layout_marginEnd="8dp"
-            android:elevation="@dimen/default_elevation"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/default_padding"
-            android:paddingTop="@dimen/default_padding"
-            android:paddingEnd="@dimen/default_padding"
-            android:paddingBottom="@dimen/default_padding"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <TextView
+            <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="monospace"
-                android:text="@string/app_title"
-                android:textAlignment="center"
-                android:textAppearance="@android:style/TextAppearance.Material.Headline"
-                android:textSize="@dimen/header_size"
-                android:typeface="monospace" />
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="@dimen/default_margin_small"
+                android:layout_marginEnd="8dp"
+                android:elevation="@dimen/default_elevation"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/default_padding"
+                android:paddingTop="@dimen/default_padding"
+                android:paddingEnd="@dimen/default_padding"
+                android:paddingBottom="@dimen/default_padding"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="monospace"
+                    android:text="@string/app_title"
+                    android:textAlignment="center"
+                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
+                    android:textSize="@dimen/header_size"
+                    android:typeface="monospace" />
 
 
-            <include layout="@layout/inputs_layout" />
+                <include layout="@layout/inputs_layout" />
 
-        </LinearLayout>
+            </LinearLayout>
+
+        </ScrollView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
