setup custom edit password dialog

--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -39,6 +39,7 @@
             android:key="somekey"
             android:title="Default password"
             android:summary="Set default password if necessary"
+            app:dialogLayout="@layout/password_dialog"
             app:iconSpaceReserved="false"
             app:useSimpleSummaryProvider="false" />
 
