patch TextInputLayout to fix label collapsing

--- a/app/src/main/res/layout/inputs_layout.xml
+++ b/app/src/main/res/layout/inputs_layout.xml
@@ -17,7 +17,7 @@
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
+    <com.google.android.material.textfield.PatchedTextInputLayout
         android:id="@+id/passwordTextLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,7 +33,7 @@
             android:autofillHints="password"
             android:inputType="textPassword" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+    </com.google.android.material.textfield.PatchedTextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
