--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,8 +61,9 @@
 
                 <ImageButton
                     android:id="@+id/copyToClipboard"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:scaleType="fitXY"
                     android:layout_gravity="center"
                     android:contentDescription="@string/copy_to_clipboard_button"
                     android:src="@drawable/lock" />
