--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="primaryColor">#18227c</color>
     <color name="primaryDarkColor">#00004f</color>
-    <color name="primaryTextColor">#000000</color>
+    <color name="primaryTextColor">#fff</color>
 </resources>
