--- a/app/src/main/res/layout/inputs_layout.xml
+++ b/app/src/main/res/layout/inputs_layout.xml
@@ -1,5 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    android:id="@+id/linearLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="@dimen/default_margin_small"
+    android:layout_marginEnd="8dp"
+    android:elevation="@dimen/default_elevation"
+    android:orientation="vertical"
+    android:paddingStart="@dimen/default_padding"
+    android:paddingTop="@dimen/default_padding"
+    android:paddingEnd="@dimen/default_padding"
+    android:paddingBottom="@dimen/default_padding"
+
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="monospace"
+        android:text="@string/app_title"
+        android:textAlignment="center"
+        android:textAppearance="@android:style/TextAppearance.Material.Headline"
+        android:textSize="@dimen/header_size"
+        android:typeface="monospace" />
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -51,4 +81,14 @@
             android:importantForAutofill="no"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
-</merge>
+
+    <ImageButton
+        android:id="@+id/copyToClipboard"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"
+        android:contentDescription="@string/copy_to_clipboard_button"
+        android:src="@drawable/lock" />
+
+</LinearLayout>
