--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -29,7 +29,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <include layout="@layout/inputs_layout" />
+            <include
+                android:id="@+id/main"
+                layout="@layout/inputs_layout" />
 
         </ScrollView>
 
