--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,12 +5,12 @@
     <item
         android:id="@+id/action_menu_hash"
         android:orderInCategory="100"
-        android:title="Hashed"
+        android:title="@string/action_menu_hash_title"
         android:icon="@drawable/ic_lock_locked_24"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_menu_settings"
         android:orderInCategory="200"
-        android:title="@string/action_settings"
+        android:title="@string/action_menu_settings_title"
         app:showAsAction="never" />
 </menu>
